--- a/android/src/main/res/layout/activity_camera.xml
+++ b/android/src/main/res/layout/activity_camera.xml
@@ -5,7 +5,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
-		tools:context="com.arseeds.idcard.CameraActivity">
+	>
+	<!--tools:context="com.nick.idcard.CameraActivity"-->
 
 	<SurfaceView
 			android:id="@+id/sfv"
@@ -18,26 +19,26 @@
 			android:layout_height="185dp"
 			android:layout_gravity="center"
 	>
-		<com.arseeds.idcard.CornerView
+		<com.nick.idcard.CornerView
 				android:layout_width="30dp"
 				android:layout_height="30dp"
 				app:corner_gravity="leftTop"
 		/>
-		<com.arseeds.idcard.CornerView
+		<com.nick.idcard.CornerView
 				android:layout_width="30dp"
 				android:layout_height="30dp"
 				app:corner_gravity="leftBottom"
 				android:layout_gravity="bottom|left"
 		/>
 
-		<com.arseeds.idcard.CornerView
+		<com.nick.idcard.CornerView
 				android:layout_width="30dp"
 				android:layout_height="30dp"
 				app:corner_gravity="rightBottom"
 				android:layout_gravity="bottom|right"
 		/>
 
-		<com.arseeds.idcard.CornerView
+		<com.nick.idcard.CornerView
 				android:layout_width="30dp"
 				android:layout_height="30dp"
 				app:corner_gravity="rightTop"
